cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_194.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_enc.c:113: error: DEAD_STORE
  The value written to &out (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_enc.c:113:13: Write of unused value
111.               tout1 = tin[1];
112.               l2n(tout0, out);
113.               l2n(tout1, out);
                   ^
114.           }
115.           l2n(tout0, iv);
